tests/single_error.check
Token <error>               Line: 1	Column: 1	

1,1: error: invalid character
	.
	^
